@@ -1,5 +1,9 @@
 Version Changes for Hypermail
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Peter McCluskey (May 22 2001)
+  - change default value for avoid_top_indices to none.
+  - fixed make to handle pcre properly.
+
 Peter McCluskey (May 16 2001)
   - fix pathnames in inline attachments with msgsperfolder/folder_by_date
 
